Final_gcc_error.cydsn/CortexM3/ARM_GCC_493/Debug/REBUILD.log
--------------- Rebuild Started: 05/12/2024 00:58:11 Project: Final, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
Deleting file ".\Final.cycdx"
Deleting file ".\Final.svd"
Deleting file ".\Final.rpt"
Deleting file ".\Final_timing.html"
cydsfit.exe -.appdatapath "C:\Users\Ivy Liu\AppData\Local\Cypress Semiconductor\PSoC Creator\3.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "\\vmware-host\Shared Folders\Documents\PSoC Creator\FinalProject\Final.cydsn\Final.cyprj" -d CY8C5868AXI-LP035 -s "\\vmware-host\Shared Folders\Documents\PSoC Creator\FinalProject\Final.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Info: apr.M0002: Analog signal "\ADC_DelSig_1:Net_35\" is connected to one terminal only. (App=cydsfit)
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -Wno-main -I..\emWinGraphics_v5_46\Code\Include\PSoC4_5\nosnts -I..\emWinGraphics_v5_46\Code\Include\PSoC4_5 -I.\Core\Include -I.\DSP\Include -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_493\Debug/tft.lst -g -D DEBUG -D ARM_MATH_CM3 -D "__VTOR_PRESENT =1" -Wall -ffunction-sections -Og -ffat-lto-objects -std=gnu99 -lm -c .\tft.c -o .\CortexM3\ARM_GCC_493\Debug\tft.o
In file included from .\Core\Include/cmsis_compiler.h:54:0,
                 from .\Core\Include/core_cm3.h:115,
                 from Generated_Source\PSoC5/core_cm3_psoc5.h:51,
                 from Generated_Source\PSoC5/project.h:48,
                 from .\tft.h:12,
                 from .\tft.c:12:
.\Core\Include/cmsis_gcc.h:377:1: warning: multi-line comment [-Wcomment]
 // #if ((defined (__ARM_ARCH_7M__      ) && (__ARM_ARCH_7M__      == 1)) || \
 ^
.\Core\Include/cmsis_gcc.h:1549:1: warning: multi-line comment [-Wcomment]
 // #if (!(defined (__ARM_ARCH_8M_MAIN__ ) && (__ARM_ARCH_8M_MAIN__ == 1)) && \
 ^
In file included from Generated_Source\PSoC5/core_cm3_psoc5.h:51:0,
                 from Generated_Source\PSoC5/project.h:48,
                 from .\tft.h:12,
                 from .\tft.c:12:
.\Core\Include/core_cm3.h: In function '__NVIC_DisableIRQ':
.\Core\Include/core_cm3.h:1551:5: warning: implicit declaration of function '__DSB' [-Wimplicit-function-declaration]
     __DSB();
     ^
.\Core\Include/core_cm3.h:1552:5: warning: implicit declaration of function '__ISB' [-Wimplicit-function-declaration]
     __ISB();
     ^
In file included from Generated_Source\PSoC5/project.h:58:0,
                 from .\tft.h:12,
                 from .\tft.c:12:
Generated_Source\PSoC5/core_cmInstr.h: At top level:
Generated_Source\PSoC5/core_cmInstr.h:388:67: error: macro "__NOP" passed 1 arguments, but takes just 0
 __attribute__( ( always_inline ) ) __STATIC_INLINE void __NOP(void)
                                                                   ^
Generated_Source\PSoC5/core_cmInstr.h:389:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
Generated_Source\PSoC5/core_cmInstr.h:399:67: error: macro "__WFI" passed 1 arguments, but takes just 0
 __attribute__( ( always_inline ) ) __STATIC_INLINE void __WFI(void)
                                                                   ^
Generated_Source\PSoC5/core_cmInstr.h:400:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
Generated_Source\PSoC5/core_cmInstr.h:410:67: error: macro "__WFE" passed 1 arguments, but takes just 0
 __attribute__( ( always_inline ) ) __STATIC_INLINE void __WFE(void)
                                                                   ^
Generated_Source\PSoC5/core_cmInstr.h:411:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
Generated_Source\PSoC5/core_cmInstr.h:420:67: error: macro "__SEV" passed 1 arguments, but takes just 0
 __attribute__( ( always_inline ) ) __STATIC_INLINE void __SEV(void)
                                                                   ^
Generated_Source\PSoC5/core_cmInstr.h:421:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
Generated_Source\PSoC5/core_cmInstr.h:432:57: warning: conflicting types for '__ISB'
 __attribute__( ( always_inline ) ) __STATIC_INLINE void __ISB(void)
                                                         ^
Generated_Source\PSoC5/core_cmInstr.h:432:57: error: static declaration of '__ISB' follows non-static declaration
In file included from Generated_Source\PSoC5/core_cm3_psoc5.h:51:0,
                 from Generated_Source\PSoC5/project.h:48,
                 from .\tft.h:12,
                 from .\tft.c:12:
.\Core\Include/core_cm3.h:1552:5: note: previous implicit declaration of '__ISB' was here
     __ISB();
     ^
In file included from Generated_Source\PSoC5/project.h:58:0,
                 from .\tft.h:12,
                 from .\tft.c:12:
Generated_Source\PSoC5/core_cmInstr.h:443:57: warning: conflicting types for '__DSB'
 __attribute__( ( always_inline ) ) __STATIC_INLINE void __DSB(void)
                                                         ^
Generated_Source\PSoC5/core_cmInstr.h:443:57: error: static declaration of '__DSB' follows non-static declaration
In file included from Generated_Source\PSoC5/core_cm3_psoc5.h:51:0,
                 from Generated_Source\PSoC5/project.h:48,
                 from .\tft.h:12,
                 from .\tft.c:12:
.\Core\Include/core_cm3.h:1551:5: note: previous implicit declaration of '__DSB' was here
     __DSB();
     ^
In file included from Generated_Source\PSoC5/project.h:58:0,
                 from .\tft.h:12,
                 from .\tft.c:12:
Generated_Source\PSoC5/core_cmInstr.h:694:0: warning: "__SSAT" redefined
 #define __SSAT(ARG1,ARG2) \
 ^
In file included from .\Core\Include/cmsis_compiler.h:54:0,
                 from .\Core\Include/core_cm3.h:115,
                 from Generated_Source\PSoC5/core_cm3_psoc5.h:51,
                 from Generated_Source\PSoC5/project.h:48,
                 from .\tft.h:12,
                 from .\tft.c:12:
.\Core\Include/cmsis_gcc.h:561:0: note: this is the location of the previous definition
 #define __SSAT(ARG1, ARG2) \
 ^
In file included from Generated_Source\PSoC5/project.h:58:0,
                 from .\tft.h:12,
                 from .\tft.c:12:
Generated_Source\PSoC5/core_cmInstr.h:710:0: warning: "__USAT" redefined
 #define __USAT(ARG1,ARG2) \
 ^
In file included from .\Core\Include/cmsis_compiler.h:54:0,
                 from .\Core\Include/core_cm3.h:115,
                 from Generated_Source\PSoC5/core_cm3_psoc5.h:51,
                 from Generated_Source\PSoC5/project.h:48,
                 from .\tft.h:12,
                 from .\tft.c:12:
.\Core\Include/cmsis_gcc.h:577:0: note: this is the location of the previous definition
 #define __USAT(ARG1, ARG2) \
 ^
--------------- Rebuild Failed: 05/12/2024 00:58:32 ---------------
